# website-builder-web

./: .env.example  .gitignore  README.md  app.py  myfineo_source.txt  prospects.example.csv  pyproject.toml  render.yaml
scripts/: build_all.py  build_myfineo_mock.py  build_one.py  demo_email.py  demo_variety.py  deploy.py  qa.py  send_emails.py
skills/: cold_email_writer.md  design_director.md
src/builder/: __init__.py  batch.py  brand_agent.py  builder.py  config.py  content_agent.py  db.py  deployer.py  email_agent.py  email_sender.py  image_picker.py  instantly_client.py  llm.py  models.py  qa_agent.py  render.py  screenshot.py
static/: index.html  script.js  style.css
templates/: editorial_classic.html.j2
tests/: test_brand_agent.py  test_deployer.py  test_email_sender.py  test_qa_agent.py  test_template_renders.py
