[project]
name = "website-builder"
version = "0.1.0"
description = "Agentic website builder for French SMBs — CSV in, deployable HTML out"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",        # OpenRouter via OpenAI-compatible client
    "pydantic>=2.6",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",       # retries
    "typer>=0.12",         # CLI
    "rich>=13.7",          # pretty logs
    "httpx>=0.27",
]

[project.optional-dependencies]
supabase = ["supabase>=2.4"]
qa = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Don't collect Pydantic models that happen to start with "Test*"
python_classes = "Test*Case"
